--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-stars": "^2.2.5",
     "styled-components": "^5.3.11",
     "tailwind-scrollbar": "^3.0.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
